# wine-nvcuda

./: LICENSE  README.md  cross-wine32.txt  cross-wine64.txt  meson.build  nvcuda_setup.sh  package-release.sh
include/: cuda_private.h
src/: meson.build  nvcuda.c  nvcuda.rc  nvcuda.spec  nvcuda_unixlib.c  nvcuda_unixlib_wow64.c  unixlib.h
